#5 fix: code refactored for readability

--- a/src/app/pages/boat/boat.component.css
+++ b/src/app/pages/boat/boat.component.css
@@ -16,7 +16,7 @@ h3 {
   font-weight: normal;
 }
 
-.search-container input[type="text"] {
+.search-container input {
   padding: 10px;
   border: none;
   outline: none;
